--- a/templates/movie.html
+++ b/templates/movie.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Movie Search Results</h1>
+    <a href="/" class="button">Back to Home</a>
     <ul class="movie_container">
         {% for movie in search_results %}
             <div>
@@ -23,7 +24,5 @@
             </div>
         {% endfor %}
         </ul>
-    
-    <a href="/">Back to Home</a>
 </body>
 </html>
