changed style a bit more

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>TMDB Movie Lists</title>
 </head>
-<body>
+<body style="background-color: #669BBC">
 
     <div class="min-h-full">
         <nav class="bg-gray-800">
