--- a/templates/movie.html
+++ b/templates/movie.html
@@ -4,7 +4,7 @@
     <title>Movie Search</title>
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
-<body>
+<body style="background-color: #669BBC">
     <h1>Movie Search Results</h1>
     <a href="/" class="button">Back to Home</a>
     <ul class="movie_container">
