--- a/static/styles.css
+++ b/static/styles.css
@@ -21,6 +21,11 @@
     align-content:center;
     text-align: center;
 }
+h1{
+    color: #fff;
+    font-size: 22px;
+    text-shadow: 1px 1px 2px #152238;
+}
 
 .button {
     display: inline-block;
