--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body class="bg-blue-400 flex flex-col min-h-screen">
-
     <header class="bg-gray-800">
         <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
             <div class="flex h-16 items-center justify-between">
@@ -43,7 +42,8 @@
     </header>
 
     <main class="flex-grow p-4">
-        {% block content %}     
+        {% block content %}
+        <h1>Welcome To A Flask Movie API</h1>     
         {% endblock %}
     </main>
 
