changed text and some style

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                             </form>
                             <form action="/search_movie" method="get" class="inline-block">
                                 <label for="movie_name" class="sr-only">Search Movie</label>
-                                <input type="text" id="movie_name" name="movie_name" placeholder="Type a movie name..." class="bg-gray-700 text-white rounded-md px-3 py-2">
+                                <input type="text" id="movie_name" name="movie_name" placeholder="Enter a movie or actor name..." class="bg-gray-700 text-left text-white rounded-md px-10 py-1">
                                 <button class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white" type="submit">Search</button>
                             </form>
                         </div>
